<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.jess.ui.map.MapFragment"
        android:label="@string/explore_posts"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.jess.ui.community.CommunityFragment"
        android:label="@string/explore_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.jess.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_my_posts"
        android:name="com.example.jess.ui.myPosts.MyPostsFragment"
        android:label="@string/title_my_posts"
        tools:layout="@layout/fragment_my_posts" >
    </fragment>

    <fragment
        android:id="@+id/navigation_my_communities"
        android:name="com.example.jess.ui.myCommunities.MyCommunitiesFragment"
        android:label="@string/title_my_communities"
        tools:layout="@layout/fragment_my_communities" >
    </fragment>

    <fragment
        android:id="@+id/navigation_main_lobby"
        android:name="com.example.jess.persistentcloudanchor.MainLobbyFragment"
        android:label="@string/create_view_posts"
        tools:layout="@layout/main_lobby" >
    </fragment>

    <fragment
        android:id="@+id/navigation_create_post"
        android:name="com.example.jess.ui.CreatePostFragment"
        android:label="Create a post"
        tools:layout="@layout/fragment_new_post" >
    </fragment>
</navigation>