<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="48dp"
    android:layout_marginBottom="72dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/choose_community_text"
            android:textColor="@color/dark_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_post_choose_community"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="8dp"/>
        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="12dp"/>

        <LinearLayout
            android:id="@+id/choose_template_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:id="@+id/choose_template_text"
                android:textColor="@color/dark_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_a_template"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
            <LinearLayout
                android:id="@+id/template_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/template_1"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/lofi_preview"/>
                <ImageView
                    android:id="@+id/template_2"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/lofi2_preview"/>
                <ImageView
                    android:id="@+id/template_3"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/rain_cloud_preview"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_post_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:text="@string/craft_your_post"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
            <EditText
                android:id="@+id/new_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="8dp"
                android:hint="title for your post" />
            <EditText
                android:id="@+id/new_post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:maxLines="3"
                android:gravity="top"
                android:background="@color/gray"
                android:padding="8dp"
                android:hint="description of your post">
            </EditText>
            <EditText
                android:id="@+id/new_post_music_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_audio"
                android:maxLines="1"
                android:padding="8dp"
                android:hint="link to music" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/new_post_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:text="Create post!"/>

    </LinearLayout>
</ScrollView>